test/errors/value/io/open1.yasl
let f = io.open('f', 'www')
